Fix image visibility in backend

--- a/.build/assets/styles/_overrides/_lazyload.scss
+++ b/.build/assets/styles/_overrides/_lazyload.scss
@@ -1,5 +1,5 @@
 @media (scripting: enabled) {
-	img[loading='lazy'] {
+	.wp-theme-latrigg img[loading='lazy'] {
 		opacity: 0;
 		transition: opacity 1s;
 
