--- a/assets/styles/admin-editor.css
+++ b/assets/styles/admin-editor.css
@@ -1279,11 +1279,11 @@ body {
 }
 
 @media (scripting: enabled) {
-  img[loading=lazy] {
+  .wp-theme-latrigg img[loading=lazy] {
     opacity: 0;
     transition: opacity 1s;
   }
-  img[loading=lazy].is--loaded {
+  .wp-theme-latrigg img[loading=lazy].is--loaded {
     opacity: 1;
   }
 }
